--- a/Suhba/Ilmhub/haji1.html
+++ b/Suhba/Ilmhub/haji1.html
@@ -22,7 +22,7 @@
       </nav>
 
       <section class="title-row">
-        <h1>Quran Recitation and Reflection</h1>
+        <h1>Hajj</h1>
         <div class="tag-group">
           <span class="tag">Blog</span>
           <span class="tag">Growth</span>
@@ -32,11 +32,19 @@
 
       <article class="content-body">
         <p>
-          The Quran is alive with guidance, mercy, and wisdom. Reading it with
-          attention, pondering its meaning, and applying its lessons transforms
-          ordinary moments into acts of devotion. Spiritual worship is not about
-          speed or volume, but about letting the words touch your heart and
-          inspire change.
+          Hajj is the pinnacle of submission and devotion, a journey that unites
+          Muslims from all over the world in worship and remembrance of Allah.
+          Walking where prophets walked, circling the Kaaba, and standing in
+          prayer amidst millions of fellow believers, one experiences a deep
+          sense of spiritual connection and humility.”
+        </p>
+
+        <p>
+          The pilgrimage is a chance to shed worldly distractions, renew the
+          heart, and witness the unity of the global Muslim community. It is a
+          transformative experience, reminding every pilgrim that Islam is a
+          family bound by faith, devotion, and love for the One who created us
+          all. the One who knows every struggle before it is spoken.
         </p>
       </article>
 
