--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Suhba – Journey of Faith</title>
-<link rel="stylesheet" href="../suhba/home/home.css">
+<link rel="stylesheet" href="suhba/home/home.css">
 </head>
 <body>
 
 <header>
     <div class="logo">
-        <img src="../suhba/home/logo.png" alt="Suhba Logo">
+        <img src="suhba/home/logo.png" alt="Suhba Logo">
         <span class="logo-text">Suhba</span>
     </div>
 
@@ -321,6 +321,6 @@
         </div>
     </footer>
     
-    <script src="../suhba/home/home.js"></script>
+    <script src="suhba/home/home.js"></script>
 </body>
 </html>
