Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <div class="image-frame">
             <img 
-                src="/suhba/home/about.jpg" 
+                src="Suhba/suhba/home/about.jpg" 
                 alt="Community Prayer">
         </div>
 
@@ -131,7 +131,7 @@
     <section class="card-grid">
         <div class="card">
             <div class="image-container">
-                <img src="suhba/home/1.jpg" alt="Foundations of Faith">
+                <img src="Suhba/suhba/home/1.jpg" alt="Foundations of Faith">
             </div>
             <h3>Foundations of Faith</h3>
             <p>Understanding belief, intention, and purpose. Building clarity and confidence in why we worship and how faith fits into daily life.</p>
@@ -139,7 +139,7 @@
 
         <div class="card">
             <div class="image-container">
-                <img src="/suhba/home/2.jpg" alt="Daily Practice">
+                <img src="Suhba/suhba/home/2.jpg" alt="Daily Practice">
             </div>
             <h3>Daily Practice with Ihsan</h3>
             <p>Developing consistency in prayer, fasting, remembrance, and character, focusing on presence, sincerity, and doing small things well.</p>
@@ -147,7 +147,7 @@
 
         <div class="card">
             <div class="image-container">
-                <img src="/suhba/home/3.jpg" alt="Belonging and Growth">
+                <img src="Suhba/suhba/home/3.jpg" alt="Belonging and Growth">
             </div>
             <h3>Belonging and Growth</h3>
             <p>Strengthening identity, finding companionship, and learning how to live faith with balance within family, community, and the wider world.</p>
